Revision history for {{$dist->name}}

{{$NEXT}}
          - [Git::CheckFor::MergeConflicts] is working again

0.039     2013-11-11 02:30:24Z
          - fix config for [Git::Commit], to properly commit files that were
            newly added to the dist
          - now generating full starting content for CONTRIBUTING, README.md,
            LICENSE when minting a new distribution

0.038     2013-11-09 22:46:12Z
          - fixed typo in CONTRIBUTING file (thanks, Сергей Романов!)
          - added use of [Prereqs::AuthorDeps], for more entries in develop
            prereqs

0.037     2013-11-02 20:58:18Z
          - fix regexp error while creating CONTRIBUTING file

0.036     2013-11-02 20:54:09Z
          - version format in Changes file altered from appending -TRIAL to
            the version (which violates CPAN::Meta::Spec) to adding
            ' (TRIAL RELEASE)' after the timestamp
          - temporarily (?) disable broken [Git::CheckFor::MergeConflicts]
          - more tweaks to CONTRIBUTING text
          - plugins which are only used in certain conditions are now also
            declared as runtime requirements, to make it easier for
            contributors (requested by haarg)

0.035     2013-10-31 05:50:52Z
          - drop the ego tag in Changes on every release

0.034     2013-10-31 02:05:20Z (Karen Etheridge)
          - more tweaks to CONTRIBUTING text

0.033     2013-10-24 01:47:28Z (Karen Etheridge)
          - now only generating README.md, LICENSE and CONTRIBUTING in the
            build directory, and copying back to the repository (and
            committing) only at release time

0.032     2013-10-17 02:26:03Z (Karen Etheridge)
          - fix some bad templates for files used in the minting profile
          - added [CheckSelfDependency]
          - all prereqs that are used based on config settings are now
            (guaranteed to be) included in the pluginbundle as runtime