@@ -123,7 +123,7 @@ Dist::Zilla::Plugin::AutoVersion = 0
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::AutoMetaResources = 0
 Dist::Zilla::Plugin::GatherDir::Template = 0
-Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
+Dist::Zilla::Plugin::ReadmeAnyFromPod = 0   ; XXX TODO - dep on version with FileGatherer phase
 Dist::Zilla::Plugin::InstallGuide = 0
 Dist::Zilla::Plugin::GenerateFile::ShareDir = 0
 Dist::Zilla::Plugin::Git::Init = 0
