@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           - [Git::CheckFor::MergeConflicts] is working again
+          - work around failure of minting test where a development release of
+            a plugin is required to generate all expected files
 
 0.039     2013-11-11 02:30:24Z
           - fix config for [Git::Commit], to properly commit files that were
